- Changed to ProcessBuilder for executing tools - Capture standard and error output of executed tool and display on standard output.